fixed styling of homepage banner on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -108,4 +108,18 @@ p {
   .home-content {
     padding-right: 2.5rem;
   }
+
+}
+@media screen and (max-width: 480px) {
+  .home-content h1 {
+    font-size: 30px;
+  }
+
+  .home-content h2 {
+    font-size: 18px;
+  }
+
+  .home-content p {
+    font-size: 1.5rem;
+  }
 }
